[package]
name = "tpke-wasm"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5" }
group-threshold-cryptography = { path = "../tpke"}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
console_error_panic_hook = "0.1.7"

# Profiles at non-root packages are ignored
# TODO: Move this configuration to .cargo/config
# [profile.release]
# opt-level = "s"
