[package]
name = "tpke-wasm"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5" }
group-threshold-cryptography = { path = "../tpke"}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0.1"
ark-serialize = { version = "0.3", features = ["derive"] }
ark-ec = "0.3"
ark-std = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
console_error_panic_hook = "0.1.7"
criterion = { version = "0.4", default-features = false }
rand_core = "0.6"

[[bench]]
name = "benchmarks"
harness = false