[package]
name = "group-threshold-cryptography"
version = "0.1.0"
edition = "2018"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "GPL-3.0"
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/heliaxdev/group-threshold-crypto/"
readme = "README.md"

[lib]
bench = false

[dependencies]
hex = "=0.4.3"
rand_core = "0.6"
rand = "0.8"
rayon = "1.5"
thiserror = "1.0.40"
anyhow = "=1.0"
sha2 = "0.10.6"
miracl_core = "=2.3.0"
ark-ff = "0.3"
ark-ec = "0.3"
ark-poly = "0.3"
ark-serialize = "0.3"
ark-std = "0.3"
ark-bls12-381 = "0.3"
itertools = "0.10"
subproductdomain = { path = "../subproductdomain" }
chacha20poly1305 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0.1"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "tpke"
path = "benches/tpke.rs"
harness = false

# Disabling these benchmarks for now, as they are stable and we only ever run them locally.
#[[bench]]
#name = "arkworks"
#path = "benches/arkworks.rs"
#harness = false

[profile.release]
opt-level = 3
lto = true

[features]
api = []
serialization = []
